# goes_xrs_synthesis

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  index.rst
src/goes_xrs_synthesis/: __init__.py  downloader.py  synthesizer.py  utility.py
tests/: test_downloader.py  test_synthesizer.py  test_utility.py
